--- a/css/styles.css
+++ b/css/styles.css
@@ -156,6 +156,7 @@ button:visited,
     display: flex;
     width: 100%;
     padding: 20px;
+    border-bottom: 2px solid rgba(46, 46, 46, 0.3);
 }
 
 .page-header__item {
