--- a/css/styles.production.css
+++ b/css/styles.production.css
@@ -185,6 +185,7 @@ button:visited {
     display: flex;
     width: 100%;
     padding: 20px;
+    border-bottom: 2px solid rgba(46, 46, 46, 0.3);
 }
 
 .page-header__item {
